--- a/project/package.json
+++ b/project/package.json
@@ -4,20 +4,25 @@
   "description": "*Coloque uma pequena justificativa sobre a escolha desse tema*",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
+    "start": "npm run build && node ./dist/index.js",
+    "dev": "tsnd index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "4.17.1"
-  },
   "devDependencies": {
-    "eslint": "6.8.0",
-    "eslint-config-trybe-backend": "1.0.1",
-    "nodemon": "2.0.15"
+    "@types/express": "4.17",
+    "@types/node": "16.11",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0",
+    "ts-node-dev": "1.1",
+    "typescript": "4.4"
+  },
+  "dependencies": {
+    "axios": "^1.3.3",
+    "express": "4.17",
+    "mysql2": "2.3.3"
   }
 }
