--- a/project/.eslintrc.json
+++ b/project/.eslintrc.json
@@ -1,9 +1,34 @@
 {
-  "env": {
-    "es2020": true
-  },
-  "extends": "trybe-backend",
-  "rules": {
-    "sonarjs/no-duplicate-string": ["error", 5]
-  }
+    "env": {
+        "es2021": true,
+        "node": true
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "overrides": [
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "rules": {
+        "indent": [
+            "error",
+            "tab"
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ]
+    }
 }
