--- a/project/package.json
+++ b/project/package.json
@@ -1,28 +1,44 @@
 {
   "name": "project",
-  "version": "1.0.0",
-  "description": "*Coloque uma pequena justificativa sobre a escolha desse tema*",
-  "main": "index.js",
+  "version": "1.1.0",
+  "description": "",
+  "main": "src/index.js",
   "scripts": {
-    "start": "npm run build && node ./dist/index.js",
-    "dev": "tsnd index.ts",
-    "build": "tsc"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon --watch \"./src/**\" --ext \"ts,js\" --ignore \"src/**/*.spec.ts,src/**/*.json\" --exec \"ts-node src/index.ts\"",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "4.17",
-    "@types/node": "16.11",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "eslint": "^8.34.0",
-    "ts-node-dev": "1.1",
-    "typescript": "4.4"
+    "@types/express": "4.17.13",
+    "@types/jest": "27.0.2",
+    "@types/node": "16.11.31",
+    "@types/supertest": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "15.0.0",
+    "eslint-plugin-editorconfig": "3.2.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-mocha": "9.0.0",
+    "eslint-plugin-sonarjs": "0.10.0",
+    "jest": "27.3.1",
+    "nodemon": "2.0.14",
+    "supertest": "6.1.6",
+    "ts-jest": "27.0.7",
+    "ts-node-dev": "1.1.8",
+    "typescript": "4.4.3"
   },
   "dependencies": {
-    "axios": "^1.3.3",
-    "express": "4.17",
-    "mysql2": "2.3.3"
+    "@types/restify-errors": "4.3",
+    "dotenv": "10.0.0",
+    "express": "4.17.1",
+    "express-async-errors": "3.1.1",
+    "mysql2": "2.3.0",
+    "restify-errors": "8.0"
   }
 }
